<resources>
    <string name="app_name">Minha Música Favorita</string>
    <string name="image_coldplay_description">Círculos coloridos em fundo cinza escuro,
    um se entrelaçando no outro formando um hexágono multicolorido.</string>
    <string name="music_name">Sky Full Of Stars</string>
    <string name="music_lyric">
        \'Cause you\'re a sky\n
        \'Cause you\'re a sky full of stars\n
        I\'m gonna give you my heart\n
        \'Cause you\'re a sky, cause you\'re a sky full of stars\n
        \'Cause you light up the path\n
        I don\'t care, go on and tear me apart\n
        I don\'t care if you do, ooh ooh, ooh\n
        \'Cause in a sky, \'cause in a sky full of stars\n
        I think I saw you\n
    </string>
    <string name="coldplay_band_image_description">4 homens brancos de cabelos curtos, com rosto sério e pintados com pó colorido.</string>
    <string name="info_coldplay">Coldplay é uma banda britânica de rock alternativo fundada em 1996 na Inglaterra pelo vocalista e pianista Chris Martin e o guitarrista Jonny Buckland. Depois de formar o Pectoralz, Guy Berryman se juntou ao grupo como baixista e eles mudaram o nome para Starfish. Will Champion entrou como vocalista de apoio e baterista, sem nenhuma experiência anterior com o instrumento. O empresário Phil Harvey é considerado o quinto membro não oficial. A banda passou a ter o nome atual quando Tim Crompton, amigo de Chris, sugeriu o nome antigo de seu grupo, Coldplay, já que o considerava excessivamente depressivo. Em seus primeiros anos, a banda gravou e lançou três EPs: Safety em 1998, Brothers and Sisters e The Blue Room em 1999. Este último foi o primeiro lançamento da banda por uma grande gravadora, depois de assinar contrato com a Parlophone. Coldplay alcançou fama mundial com o lançamento da canção Yellow em 2000!</string>
    <string name="albuns_text">Lista de Álbuns</string>
    <string name="imagem_capa_album_img">Imagem da capa do álbum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capa_do_album">Capa do Álbum</string>
    <string name="nome_do_album">Nome do Álbum</string>
    <string name="exemplo_de_descri_o">Exemplo de descrição</string>
    <string name="artista">Artista:</string>
    <string name="lancamento">Lançamento:</string>
    <string name="artista_txt">Artista:</string>
    <string name="gravadora">Gravadora:</string>
    <string name="estudio">Estúdio:</string>
    <string name="formato">Formato:</string>
    <string name="genero">Gênero:</string>

</resources>