<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleCentered="true"
            android:background="@color/primary_color_pink"
            app:titleTextColor="@color/white"/>
        
        <ImageView
            android:id="@+id/coldplay_image"
            android:contentDescription="@string/image_coldplay_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_250dp"
            android:src="@drawable/coldplay_wallpaper"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/music_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/music_name"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="@dimen/margin_30dp"
            />

        <TextView
            android:id="@+id/music_lyric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_lyric"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textAlignment="center"
            android:background="@color/white"/>

    </LinearLayout>
</ScrollView>